Temporarily removing HTTP to HTTPS redirection.

--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -11,14 +11,14 @@ ServerName my.esgf.node
 
   # redirect all requests from HTTP to HTTPS
   # EXCEPT for the applications listed below
-  RewriteEngine On
-  RewriteCond %{HTTPS} off
-  RewriteCond %{REQUEST_URI} !^/esg-search(.*)$
-  RewriteCond %{REQUEST_URI} !^/las(.*)$
-  RewriteCond %{REQUEST_URI} !^/solr(.*)$
-  RewriteCond %{REQUEST_URI} !^/thredds(.*)$
-  RewriteCond %{REQUEST_URI} !^/esgf-stats-api(.*)$
-  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+  #RewriteEngine On
+  #RewriteCond %{HTTPS} off
+  #RewriteCond %{REQUEST_URI} !^/esg-search(.*)$
+  #RewriteCond %{REQUEST_URI} !^/las(.*)$
+  #RewriteCond %{REQUEST_URI} !^/solr(.*)$
+  #RewriteCond %{REQUEST_URI} !^/thredds(.*)$
+  #RewriteCond %{REQUEST_URI} !^/esgf-stats-api(.*)$
+  #RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
   SSLProxyEngine On
 
