Updating the node manager.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,19 +179,19 @@ services:
          - "${ESGF_HOSTNAME}"
      dbnetwork: {}
 
-  #esgf-node-manager:
-  # image: esgfhub/esgf-node-manager:${ESGF_VERSION}
-  # container_name: node-manager
-  # volumes_from:
-  #   - esgf-config
-  # environment:
-  #   - SSL_CERT_DIR=/etc/grid-security/certificates
-  #   - ESGF_HOSTNAME
-  # depends_on:
-  #   - esgf-postgres
-  # networks:
-  #   default: {}
-  #   dbnetwork: {}
+  esgf-node-manager:
+   image: esgfhub/esgf-node-manager:${ESGF_VERSION}
+   container_name: node-manager
+   volumes_from:
+     - esgf-config
+   environment:
+     - SSL_CERT_DIR=/etc/grid-security/certificates
+     - ESGF_HOSTNAME
+   depends_on:
+     - esgf-postgres
+   networks:
+     default: {}
+     dbnetwork: {}
 
   # FTP server
   #esgf-ftp:
