--- a/ecs/EsgfCluster.config
+++ b/ecs/EsgfCluster.config
@@ -19,8 +19,8 @@ echo "ECS_CLUSTER=EsgfCluster" >> /etc/ecs/ecs.config
 sudo yum install -y nfs-utils
 sudo stop ecs
 sudo mkdir -p /esgf_data
-sudo chmod 777 /esgf_data
-sudo chown ec2-user:ec2-user /esgf_data
+#sudo chmod 777 /esgf_data
+#sudo chown ec2-user:ec2-user /esgf_data
 sudo echo "fs-2ca17785.efs.us-west-2.amazonaws.com:/ /esgf_data nfs4 nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 0 0" >> /etc/fstab
 sudo mount -a -t nfs4
 sudo service docker restart
