Changing how Tomcat is started in the IdP.

--- a/idp-node/Dockerfile
+++ b/idp-node/Dockerfile
@@ -17,4 +17,6 @@ RUN cd /usr/local/tomcat/webapps/esgf-idp/ && \
 
 # run Tomcat as non-privileged user
 USER tomcat
-ENTRYPOINT ["/usr/local/tomcat/bin/catalina.sh", "run"]
+COPY scripts/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+#ENTRYPOINT ["/usr/local/tomcat/bin/catalina.sh", "run"]
