Improving postgres supervisor configuration.

--- a/node/conf/supervisord.conf
+++ b/node/conf/supervisord.conf
@@ -1,6 +1,17 @@
-# default supervisoron configuration for an ESGF node
+# default supervisor configuration for an ESGF node
+[unix_http_server]
+file=/tmp/supervisor.sock
+
 [supervisord]
 nodaemon=true
+logfile=/tmp/supervisord.log
+pidfile=/tmp/supervisord.pid
  
 [include]
 files = /etc/supervisor/conf.d/*.conf
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
