docker version of the slcs

--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -90,6 +90,12 @@ WSGISocketPrefix run/wsgi
   # ProxyPassReverse /esgf-desktop  ajp://localhost:8009/esgf-desktop
   # ProxyPass /las  ajp://localhost:8009/las
   # ProxyPassReverse /las   ajp://localhost:8009/las
+  
+  # proxy requests for slcs resources
+  ProxyPass /slcs-admin http://slcs-server:5000/admin timeout=600
+  ProxyPassReverse /slcs-admin http://slcs-server:5000/admin timeout=600
+  ProxyPass /slcs http://slcs-nginx timeout=600
+  ProxyPassReverse /slcs http://slcs-nginx timeout=600
 
   # note: WSGIPythonEggs must match location created by Dockerfile
   WSGIDaemonProcess cog-site python-path=/usr/local/cog/venv/lib/python2.7/site-packages:/usr/local/cog/cog-install python-eggs=/var/www/.python-eggs user=apache group=apache threads=25
