fixing everything. got messed up somehow

--- a/slcs-server/Dockerfile
+++ b/slcs-server/Dockerfile
@@ -3,33 +3,81 @@ from centos:6
 
 MAINTAINER Frank Greguska <greguska@jpl.nasa.gov>
 
-
 RUN yum clean all && \
     yum -y update && \
     yum -y install wget \
     git \
     sudo \
-    epel-release
+    epel-release \
+    gcc \
+    https://centos6.iuscommunity.org/ius-release.rpm
     
-RUN yum -y install ansible
+RUN yum -y install libffi-devel \
+    openssl-devel \
+    python27 \
+    python27-devel \
+    python27-pip \
+    python27-setuptools
+    
+    
+RUN groupadd -r slcs && adduser -r -g slcs slcs
+    
+ENV APPLICATION_HOME=/usr/local/esgf-slcs-server
+ENV CODE_LOCATION=$APPLICATION_HOME/src/esgf_slcs_server \
+    APPLICATION_CONF_DIR=$APPLICATION_HOME/conf/app
+    
+RUN mkdir -p $CODE_LOCATION && \
+    mkdir -p $APPLICATION_CONF_DIR && \
+    chown -R slcs:slcs $APPLICATION_HOME && \
+    chown -R :slcs /usr/lib/python2.7 && \
+    chmod -R g+wx /usr/lib/python2.7 && \
+    chown -R :slcs /usr/lib64/python2.7 && \
+    chmod -R g+wx /usr/lib64/python2.7 && \
+    chown -R :slcs /usr/bin && \
+    chmod -R g+wx /usr/bin && \
+    chown -R :slcs $APPLICATION_CONF_DIR && \
+    chmod -R g+wx $APPLICATION_CONF_DIR
 
-WORKDIR /usr/local/esgf-slcs-server
+USER slcs
+WORKDIR $CODE_LOCATION
+ARG ESGF_SLCS_SERVER_VERSION=master
+ENV START_HERE=yes
+RUN git init && \
+    git pull https://github.com/fgreg/esgf-slcs-server $ESGF_SLCS_SERVER_VERSION && \
+    pip2.7 install -r requirements.txt && \
+    pip2.7 install waitress
 
-COPY production_all.yml /usr/local/esgf-slcs-server
-COPY development.yml /usr/local/esgf-slcs-server
-ENV SERVER_FQDN=www.my-slcs-server.com \
-    APPLICATION_USER=waitress
+USER root
+COPY settings.py $CODE_LOCATION/esgf_slcs_server/settings.py
+RUN chown slcs:slcs $CODE_LOCATION/esgf_slcs_server/settings.py && \
+    chmod 644 $CODE_LOCATION/esgf_slcs_server/settings.py
+USER slcs
+RUN pip2.7 install $CODE_LOCATION
+    
+RUN touch $APPLICATION_CONF_DIR/secret_key.txt && \
+    tr -dc '[:alnum:][:punct:]' < /dev/urandom | head -c 100 > $APPLICATION_CONF_DIR/secret_key.txt && \
+    chmod 400 $APPLICATION_CONF_DIR/secret_key.txt
+    
+VOLUME $APPLICATION_HOME/conf/db
+VOLUME $APPLICATION_HOME/conf/ca
 
-VOLUME ["/usr/local/esgf-slcs-server/ca"]
-
-# RUN git clone https://github.com/cedadev/esgf-slcs-server-playbook.git && \
-#     ansible-playbook -i esgf-slcs-server-playbook/playbook/inventories/localhost -e "@/usr/local/esgf-slcs-server/production_all.yml" -e "application_user=${APPLICATION_USER}" -e "server_name=${SERVER_FQDN}" esgf-slcs-server-playbook/playbook/playbook.yml
-
-WORKDIR /code
-RUN git clone https://github.com/cedadev/esgf-slcs-server.git && chmod -R 777 /code
-WORKDIR /usr/local/esgf-slcs-server
-# RUN git clone https://github.com/cedadev/esgf-slcs-server-playbook.git && \
-#     ansible-playbook -i esgf-slcs-server-playbook/playbook/inventories/localhost -e "@/usr/local/esgf-slcs-server/development.yml" esgf-slcs-server-playbook/playbook/playbook.yml
+ENV SLCS_APPLICATION_HOME=$APPLICATION_HOME \
+    SLCS_STATIC_ROOT=/var/www/static
 
 
-CMD ["/bin/bash"]
+COPY onlineca.ini $APPLICATION_CONF_DIR/onlineca.ini
+COPY docker-entrypoint.py /usr/local/bin/docker-entrypoint.py
+
+USER root
+RUN chown slcs:slcs $APPLICATION_CONF_DIR/onlineca.ini && \
+    chmod 644 $APPLICATION_CONF_DIR/onlineca.ini && \
+    mkdir -p $SLCS_STATIC_ROOT && \
+    chown -R slcs:slcs $SLCS_STATIC_ROOT && \
+    chmod -R 744 $SLCS_STATIC_ROOT && \
+    chown slcs:slcs /usr/local/bin/docker-entrypoint.py && \
+    chmod 744 /usr/local/bin/docker-entrypoint.py
+USER slcs
+
+
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.py"]
+CMD ["--help"]
