--- a/slcs-server/docker-compose.yml
+++ b/slcs-server/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.0"
 
 volumes: 
-  slcs-static-web: 
+  slcs_static_web: 
 
 networks: 
   dbnetwork: 
@@ -10,10 +10,11 @@ networks:
 
 services: 
   slcs: 
-    command: ["-sn", "$ESGF_HOSTNAME", "-ds", "rootAdmin", "-sdn", "slcs", "-sdh", "slcs-postgres", "-sdu", "dbsuper", "-udn", "esgcet", "-udh", "postgres", "-udu", "dbsuper", "--static-url", "https://$ESGF_HOSTNAME/slcs/"]
-    container_name: slcs
+    command: ["-sn", "slcs-server", "-ds", "rootAdmin", "-sdn", "slcs", "-sdh", "slcs-postgres", "-sdu", "dbsuper", "-udn", "esgcet", "-udh", "postgres", "-udu", "dbsuper", "--static-url", "https://$ESGF_HOSTNAME/slcs/"]
+    container_name: slcs-server
     depends_on: 
       - slcs-postgres
+      - slcs-nginx
     expose: 
       - "5000"
     image: esgfhub/slcs-server
@@ -23,14 +24,12 @@ services:
     ports: 
       - "5000:5000"
     volumes: 
-      - "slcs-static-web:/var/www/static"
+      - "slcs_static_web:/var/www/static"
       - "$ESGF_CONFIG/slcs/conf/db/:/usr/local/esgf-slcs-server/conf/db"
       - "$ESGF_CONFIG/slcs/conf/ca/:/usr/local/esgf-slcs-server/conf/ca"
   
   slcs-nginx: 
     container_name: slcs-nginx
-    depends_on: 
-      - slcs
     expose: 
       - "443"
       - "80"
@@ -39,7 +38,9 @@ services:
       - default
       - dbnetwork
     volumes: 
-      - "slcs-static-web:/usr/share/nginx/html:ro"
+      - "slcs_static_web:/usr/share/nginx/html"
+      - "$ESGF_CONFIG/slcs/conf/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+      - "$ESGF_CONFIG/slcs/conf/nginx/nginx-start.sh:/usr/bin/start-nginx.sh"
   
   slcs-postgres: 
     container_name: slcs-postgres
