--- a/docker-compose-index-node-stack.yml
+++ b/docker-compose-index-node-stack.yml
@@ -8,20 +8,14 @@
 # ESGF_VERSION: version of ESGF/Docker distribution
 #       example: export ESGF_VERSION=1.0
 
+# service stack:
+# - front_node: httpd daemon (and container visualizer)
+# - index_node: esgf-search web application runnning within Tomcat
+# - solr_node: solr search engine running within Jetty
+
 version: '3'
 
 services:
-
-  # data container holding site-specific ESGF configuration
-  #esgf-config:
-  #  image: centos:6
-  #  container_name: esgf-config
-  #  volumes:
-  #   - $ESGF_CONFIG/httpd/certs/:/etc/certs/
-  #   - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
-  #   - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
-  #   - $ESGF_CONFIG/esg/config/:/esg/config/
-  #   - $ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts:/usr/java/latest/jre/lib/security/jssecacerts
 
   esgf-solr:
     image: esgfhub/esgf-solr:${ESGF_VERSION}
@@ -54,9 +48,6 @@ services:
     depends_on:
       - esgf-solr
     volumes:
-    # - $ESGF_CONFIG/httpd/certs/:/etc/certs/
-    # - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
-    # - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
      - $ESGF_CONFIG/esg/config/:/esg/config/
      - $ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts:/usr/java/latest/jre/lib/security/jssecacerts
     networks:
@@ -74,8 +65,6 @@ services:
      - $ESGF_CONFIG/httpd/certs/:/etc/certs/
      - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
      - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
-   #  - $ESGF_CONFIG/esg/config/:/esg/config/
-   #  - $ESGF_CONFIG/esg/config/tomcat/esg-truststore.ts:/usr/java/latest/jre/lib/security/jssecacerts
    ports:
      - "80:80"
      - "443:443"
