--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -92,8 +92,8 @@ WSGISocketPrefix run/wsgi
   # ProxyPassReverse /las   ajp://localhost:8009/las
   
   # proxy requests for slcs resources
-  ProxyPass /slcs-admin http://slcs-server:5000/admin timeout=600
-  ProxyPassReverse /slcs-admin http://slcs-server:5000/admin timeout=600
+  ProxyPass /slcs-admin http://slcs-server:5000 timeout=600
+  ProxyPassReverse /slcs-admin http://slcs-server:5000 timeout=600
   ProxyPass /slcs http://slcs-nginx timeout=600
   ProxyPassReverse /slcs http://slcs-nginx timeout=600
 
