chanded the proxy rule so /slcs now forwards to the certificate server and /slcs-static forwards to the static content hosted on nginx

--- a/esgf_config/httpd/conf/esgf-httpd.conf
+++ b/esgf_config/httpd/conf/esgf-httpd.conf
@@ -92,10 +92,10 @@ WSGISocketPrefix run/wsgi
   # ProxyPassReverse /las   ajp://localhost:8009/las
   
   # proxy requests for slcs resources
-  ProxyPass /slcs-admin http://slcs-server:5000 timeout=600
-  ProxyPassReverse /slcs-admin http://slcs-server:5000 timeout=600
-  ProxyPass /slcs http://slcs-nginx timeout=600
-  ProxyPassReverse /slcs http://slcs-nginx timeout=600
+  ProxyPass /slcs http://slcs-server:5000 timeout=600
+  ProxyPassReverse /slcs http://slcs-server:5000 timeout=600
+  ProxyPass /slcs-static http://slcs-nginx timeout=600
+  ProxyPassReverse /slcs-static http://slcs-nginx timeout=600
 
   # note: WSGIPythonEggs must match location created by Dockerfile
   WSGIDaemonProcess cog-site python-path=/usr/local/cog/venv/lib/python2.7/site-packages:/usr/local/cog/cog-install python-eggs=/var/www/.python-eggs user=apache group=apache threads=25
