--- a/cog/conf/cog_settings.cfg
+++ b/cog/conf/cog_settings.cfg
@@ -1,3 +1,4 @@
+# minimal settings necessary to startup a standalone CoG application
 [DEFAULT]
 SITE_NAME = localhost
 SITE_DOMAIN = localhost
@@ -8,6 +9,4 @@ DATABASE_PATH = /usr/local/cog/cog_config/django.data
 MEDIA_ROOT = /usr/local/cog/cog_config/site_media
 DEBUG = False
 ALLOWED_HOSTS = localhost
-# FIXME: remove after next release
-KNOWN_PROVIDERS = /esg/config/esgf_known_providers.xml
 PRODUCTION_SERVER = False
