--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -62,6 +62,8 @@ services:
       - COG_INSTALL_DIR=/usr/local/cog/cog_install
       - COG_CONFIG_DIR=/usr/local/cog/cog_config
       - ESGF_HOSTNAME
+      # flag to execute CoG initialization, defaults to true, may be overridden from shell environment before starting docker-compose
+      - ${INIT:-true}
     deploy:
       mode: replicated
       replicas: 1
@@ -128,5 +130,3 @@ volumes:
   # contains TDS configuration, catalogs, cache, and logs
   # (directory below -Dtds.content.root.path=/esg/content)
   #tds_data:
-
-
