Downloading war file from the interwebs.

--- a/idp-node/Dockerfile
+++ b/idp-node/Dockerfile
@@ -8,8 +8,8 @@ MAINTAINER Luca Cinquini <luca.cinquini@jpl.nasa.gov>
 # ESGF esg-idp web application
 ARG ESGF_REPO=http://distrib-coffee.ipsl.jussieu.fr/pub/esgf
 
-#ADD $ESGF_REPO/dist/devel/esgf-idp/esgf-idp.war /usr/local/tomcat/webapps/esgf-idp/
-ADD esgf-idp.war /usr/local/tomcat/webapps/esgf-idp/
+ADD $ESGF_REPO/dist/devel/esgf-idp/esgf-idp.war /usr/local/tomcat/webapps/esgf-idp/
+#ADD esgf-idp.war /usr/local/tomcat/webapps/esgf-idp/
 RUN cd /usr/local/tomcat/webapps/esgf-idp/ && \
     jar xvf esgf-idp.war && \
     rm esgf-idp.war && \
