--- a/docker-stack-index-node.yml
+++ b/docker-stack-index-node.yml
@@ -22,9 +22,14 @@ services:
     ports:
       - "8983:8983"
       - "8984:8984" 
+    environment:
+      # use SOLR_DATA location from environment, or default to solr_index/ under user home directory
+      - ${SOLR_DATA:-~/solr-index}
     volumes:
      # use solr index on Docker volume
      - solr_data:/esg/solr-index
+     # use Solr index on shared partition
+     - $SOLR_DATA:/esg/solr-index
      # use solr index from existing local directory
      #- /Users/cinquini/tmp/solr-index:/esg/solr-index
     networks:
