--- a/aws/EsgfCluster.config
+++ b/aws/EsgfCluster.config
@@ -31,4 +31,10 @@ sudo start ecs
 # extract the ESGF host configuration to the standard location
 tar xvf /esgf_data/esgf_config.tar -C /home/ec2-user
 
+# define global env variables
+echo "ESGF_HOSTNAME=airborne-elb1.dyndns.org" >> /etc/environment
+echo "ESGF_CONFIG=/home/ec2-user/esgf_config" >> /etc/environment
+echo "ESGF_VERSION=1.2" >> /etc/environment
+echo "SOLR_DATA=/esgf_data/solr-index" >> /etc/environment
+
 --==BOUNDARY==--
