--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -9,10 +9,14 @@
 #       example: export ESGF_HOSTNAME=`docker-machine ip`
 # ESGF_VERSION: version of ESGF/Docker distribution
 #       example: export ESGF_VERSION=1.0
-# ESGF_DATA_DIR: root of ESGF data directories
+# SOLR_DATA: location of Solr index
+#       example: export SOLR_DATA=/esg/solr-index
+# COG_DATA: location of CoG site data
+#       example: export COG_DATA=/usr/local/cog/cog_config
+
 #
 # Services deployment:
-# - front_node: httpd daemon, cog (for data initialization) and visualizer
+# - front_node: httpd daemon, cog, and visualizer
 # - db_node: postgres
 # - index_node: esgf-search web application runnning within Tomcat, solr search engine running within Jetty
 
@@ -39,15 +43,14 @@ services:
 
   # CoG
   # data container to hold CoG source code and python virtual environment
-  # this container stops after the volume 'cog_data' is initialized
   esgf-cog:
     image: esgfhub/esgf-cog:${ESGF_VERSION}
     ports:
       - "8000:8000"
     volumes:
-      - cog_data:/usr/local/cog/cog_config
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
+      - $COG_DATA:/usr/local/cog/cog_config
       - $ESGF_CONFIG/httpd/certs/:/etc/certs/
       - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
       - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
@@ -81,10 +84,7 @@ services:
       - "8983:8983"
       - "8984:8984"
     volumes:
-     # use solr index on Docker volume
-     - solr_data:/esg/solr-index
-     # use solr index from existing local directory
-     #- /Users/cinquini/tmp/solr-index:/esg/solr-index
+      - $SOLR_DATA:/esg/solr-index
     networks:
       - default
     deploy:
@@ -115,9 +115,9 @@ services:
     image: esgfhub/esgf-httpd:${ESGF_VERSION}
     entrypoint: /usr/local/bin/docker-entrypoint.sh
     volumes:
-      - cog_data:/usr/local/cog/cog_config
       - cog_install_dir:/usr/local/cog/cog_install
       - cog_venv:/usr/local/cog/venv
+      - $COG_DATA:/usr/local/cog/cog_config
       - $ESGF_CONFIG/httpd/certs/:/etc/certs/
       - $ESGF_CONFIG/httpd/conf/esgf-httpd.conf:/etc/httpd/conf.d/esgf-httpd.conf
       - $ESGF_CONFIG/grid-security/certificates/:/etc/grid-security/certificates/
@@ -164,13 +164,13 @@ volumes:
   # postgres data and configuration
   pg_data:
   # cog data directory
-  cog_data:
+  #cog_data:
   # cog source directory
   cog_install_dir:
   # cog venv directory
   cog_venv:
   # contains Solr index data
-  solr_data:
+  #solr_data:
   # contains TDS configuration, catalogs, cache, and logs
   # (directory below -Dtds.content.root.path=/esg/content)
   #tds_data:
